--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.5.2",
     "vue-cookies": "^1.5.12",
+    "vue-json-excel": "^0.2.98",
     "vue-router": "^3.0.2",
     "vuetify": "^2.2.11"
   },
